Updated to Java 21