@@ -34,7 +34,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>--add-exports</arg>
                         <arg>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</arg>
                     </compilerArgs>
@@ -45,7 +45,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <additionalOptions>--enable-preview --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</additionalOptions>
+                    <additionalOptions> --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
